<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@+id/dreamTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dream_user"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/dreamBody"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/test_dream" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageButton
            android:id="@+id/imageButton1"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/twitter" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/facebook" />

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginLeft="70dp"
            android:src="@drawable/heart" />

        <TextView
            android:id="@+id/dreamLikes"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:text="@string/test_likes"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

</LinearLayout>